Pill lifestyle and goals

--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -899,11 +899,14 @@ label h6 {
 }
 
 .quiz-section .quiz-box {
+    display:flex;
     position: relative;
     width: 100%;
     height: 100vh;
     border-radius: 6px;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 20px 30px;
     opacity: 0;
     pointer-events: none;
@@ -968,10 +971,11 @@ label h6 {
 
 .quiz-box .quiz-footer {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding-top: 20px;
     margin-top: 30px;
+    padding: 30px;
 }
 
 .quiz-footer .question-total {
@@ -992,6 +996,7 @@ label h6 {
     font-weight: 600;
     cursor: pointer;
     transition: .5s;
+    margin-left: 500px;
 }
 
 .quiz-footer .next-btn.active:hover {
@@ -1032,6 +1037,89 @@ label h6 {
 .quiz-footer .prev-btn.active:hover {
     background: #329da8;
     border-color: #329da8;
+}
+
+.pill{
+    position: relative;
+    width: 500px;
+    height: 500px;
+    padding: 20px 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.particle1{
+    position: absolute;
+    animation: none;
+    opacity: 0;
+}
+
+.particle2{
+    position: absolute;
+    animation: none;
+    opacity: 0;
+}
+
+.particle3{
+    position: absolute;
+    animation: none;
+    opacity: 0;
+}
+
+.particle4{
+    position: absolute;
+    animation: none;
+    opacity: 0;
+}
+
+.particle5{
+    position: absolute;
+    animation: none;
+    opacity: 0;
+}
+
+.animateDropAndDisappear {
+    animation: dropDown 3s linear forwards;
+}
+
+.capsule {
+    position: absolute;
+    overflow: hidden;
+    
+    clip-path: url(#clipPath);
+}
+
+.capsule.wobble {
+    animation: wobble 0.5s ease;
+}
+
+#innerRect {
+    fill: url(#colorGradient);
+    transition: width 1s;
+}
+
+@keyframes wobble {
+    25% { transform: rotate(-5deg); }
+    50% { transform: rotate(5deg); }
+    75% { transform: rotate(-5deg); }
+    100% { transform: rotate(0deg);}
+}
+
+@keyframes dropDown {
+    0% {
+        transform: translateY(-100px);
+        opacity: 1;
+    }
+    /* 50%{
+        transform: translateY(-50px);
+        opacity: 0.5
+    } */
+    100% {
+        transform: translateY(100px);
+        opacity: 0;
+    }
 }
 
 .lifestyle-quiz {
@@ -1190,7 +1278,62 @@ label h6 {
     border-color: #329da8;
 }
 
+.pill2{
+    position: relative;
+    width: 500px;
+    height: 500px;
+    padding: 20px 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
+.shape1{
+    position: absolute;
+    animation: none;
+    opacity: 1;
+}
+
+.shape2{
+    position: absolute;
+    animation: none;
+    opacity: 1;
+}
+
+.shape3{
+    position: absolute;
+    animation: none;
+    opacity: 1;
+}
+
+.shape4{
+    position: absolute;
+    animation: none;
+    opacity: 1;
+}
+
+.shape5{
+    position: absolute;
+    animation: none;
+    opacity: 1;
+}
+
+.capsule2 {
+    position: absolute;
+    overflow: hidden;
+    
+    clip-path: url(#clipPath2);
+}
+
+.capsule2.wobble {
+    animation: wobble 0.5s ease;
+}
+
+#innerRect2 {
+    fill: url(#colorGradient2);
+    transition: width 1s;
+}
 
 
 
