--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -1142,11 +1142,14 @@ label h6 {
 }
 
 .lifestyle-section .lifestyle-box {
+    display: flex;
     position: relative;
     width: 100%;
     height: 100vh;
     border-radius: 6px;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 20px 30px;
     opacity: 0;
     pointer-events: auto;
@@ -1236,6 +1239,7 @@ label h6 {
     font-weight: 600;
     cursor: pointer;
     transition: .5s;
+    margin-left: 500px;
 }
 
 .lifestyle-footer .next-btn1.active:hover {
@@ -1292,31 +1296,31 @@ label h6 {
 .shape1{
     position: absolute;
     animation: none;
-    opacity: 1;
+    opacity: 0;
 }
 
 .shape2{
     position: absolute;
     animation: none;
-    opacity: 1;
+    opacity: 0;
 }
 
 .shape3{
     position: absolute;
     animation: none;
-    opacity: 1;
+    opacity: 0;
 }
 
 .shape4{
     position: absolute;
     animation: none;
-    opacity: 1;
+    opacity: 0;
 }
 
 .shape5{
     position: absolute;
     animation: none;
-    opacity: 1;
+    opacity: 0;
 }
 
 .capsule2 {
@@ -1335,9 +1339,24 @@ label h6 {
     transition: width 1s;
 }
 
+.animateDropAndDisappear2 {
+    animation: dropDown2 3s linear forwards;
+}
 
-
-
+@keyframes dropDown2 {
+    0% {
+        transform: translateY(-100px);
+        opacity: 1;
+    }
+    /* 50%{
+        transform: translateY(-50px);
+        opacity: 0.5
+    } */
+    100% {
+        transform: translateY(100px);
+        opacity: 0;
+    }
+}
 
 
 
