--- a/styles/test.css
+++ b/styles/test.css
@@ -241,6 +241,212 @@ body, html {
 }
 
 
+.made-for-img {
+    width: 100%; /* Set the width to 100% of the parent container */
+    height: 100%; /* Set the height to 100% of the parent container */
+    object-fit: cover; /* Maintain aspect ratio and cover the entire space */
+}
+
+.made-for-section {
+    text-align: center;
+    height: 40vh;
+    width: 100%;
+    display: flex;
+    justify-content: space-between; /* Spread the content between the center and the far right */
+    align-items: center;
+    position: relative;
+}
+
+.made-for-text {
+    position: absolute;
+    top: 50%;
+    right: 10%; /* Adjust the percentage to position it between the center and the far right */
+    transform: translate(-100%, -50%);
+    font-size: 24px;
+    /* You can add additional styling as needed */
+}
+
+.made-for-text h1 {
+    font-size: 56px;
+}
+
+.made-for-text h5 {
+    font-size: 24px;
+    font-style: italic;
+}
+
+.vitamin-cards {
+ 
+    height: 60vh;
+    width: 100%;
+}
+
+.slide-container{
+    max-width: 1120px;
+    width: 100%;
+    padding: 40px 0;
+  }
+  .slide-content{
+    margin: 0 40px;
+    overflow: hidden;
+    border-radius: 25px;
+  }
+  .card{
+    border-radius: 25px;
+    background-color: #FFF;
+  }
+  .image-content,
+  .card-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 14px;
+    
+  }
+  .image-content{
+    position: relative;
+    row-gap: 5px;
+    padding: 25px 0;
+  }
+  .overlay{
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    border-radius: 25px 25px 90px 90px;
+  }
+  #overlay-1{
+    background-color: #f58a42;
+  }
+  #overlay-2{
+    background-color: #42f575;
+    
+  }
+  #overlay-3{
+    background-color:#42e0f5;
+  }
+  #overlay-4{
+    background-color: #9c42f5;
+  }
+  #overlay-5{
+    background-color:#f542e6;
+  }
+  #overlay-6{
+    background-color:#f54242;
+  }
+  .overlay::before,
+  .overlay::after{
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: -40px;
+    height: 40px;
+    width: 40px;
+    background-color: #2ea6bc;
+  }
+  .overlay::after{
+    border-radius: 0 0 0 0;
+    background-color: #FFF;
+  }
+  .card-image{
+    position: relative;
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    background: #FFF;
+    padding: 3px;
+  }
+  .card-image .card-img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 4px solid #2ea6bc;
+  }
+  .name{
+    font-size: 18px;
+    font-weight: 500;
+    color: #333;
+  }
+  .description{
+    font-size: 14px;
+    color: #707070;
+    text-align: center;
+  }
+  .button{
+    border: none;
+    font-size: 16px;
+    color: #FFF;
+    padding: 8px 16px;
+    border-radius: 6px;
+    margin: 14px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  #btn1{
+  background-color: #1d259f;
+  }
+  #btn2{
+    background-color: #3da38d ;
+  }
+  #btn3{
+    background-color:#02a9f7;
+  }
+  #btn4{
+    background-color:  #745b81 ;
+  }
+  #btn5{
+    background-color:#e98585;
+  }
+  #btn6{
+    background-color:#cb75fd;
+  }
+  .button:hover{
+    background: #1f7a99;
+  }
+  
+  .swiper-navBtn{
+    color: #fff;
+    transition: color 0.3s ease;
+  }
+  .swiper-navBtn:hover{
+    color: #4070F4;
+  }
+  .swiper-navBtn::before,
+  .swiper-navBtn::after{
+    font-size: 35px;
+  }
+  .swiper-button-next{
+    right: 0;
+  }
+  .swiper-button-prev{
+    left: 0;
+  }
+  .swiper-pagination-bullet{
+    background-color: #6E93f7;
+    opacity: 1;
+  }
+  .swiper-pagination-bullet-active{
+    background-color: #4070F4;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .slide-content{
+      margin: 0 10px;
+    }
+    .swiper-navBtn{
+      display: none;
+    }
+  }
+
+.results-section h1 {
+    margin-top: 30px;
+    margin-bottom: 40px;
+    text-align: center;
+    font-size: 32px;
+    font-style: italic;
+}
 
 
 
