--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -1397,6 +1397,12 @@ label h6 {
     font-style: italic;
 }
 
+.results-section {
+    width: 100%;
+    height: 60vh;
+    margin-top: -382px
+}
+
 
 
 
