--- a/styles/quiz.css
+++ b/styles/quiz.css
@@ -5,6 +5,10 @@
     font-family: 'Public Sans', sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+
 body, html {
     height: 100%;
     margin: 0;
