--- a/styles/home.css
+++ b/styles/home.css
@@ -156,7 +156,7 @@ section.home video {
 }
 
 .image-item {
-    text-align: center; /* Center align the text and image within each item */
+    text-align: center; 
     margin: 10px;
 }
 
